rename btn-pos--* to jumper and set jumper to be fixed

--- a/src/sass/components/_jumper.scss
+++ b/src/sass/components/_jumper.scss
@@ -1,7 +1,7 @@
 .jumper {
-  position: sticky;
-  float: right;
-  top: 2rem;
+  position: fixed;
+  right: 3rem;
+  bottom: 2rem;
   height: 15rem;
 
   display: flex;
